Fix drop indicator rendering for the layers

NodeView::visualRect() is used by Qt for rendering the drop indicator.
All other metrics are calculated by NodeDelegate manually using the
unmodified NodeView::originalVisualRect() call.

BUG:410970